--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-# Dependencies
-
-streamlit==1.31.0
-pandas==2.1.4
-scikit-learn==1.3.2
-Sastrawi==1.0.1
-numpy==1.26.2
+fastapi
+uvicorn
+python-multipart
+gunicorn
+pandas
+scikit-learn
+numpy
+rapidfuzz
+Sastrawi
